@@ -5,11 +5,11 @@
 #define ACE_HAS_IPHONE
 #define ACE_SIZEOF_LONG_DOUBLE 8
 
-#include "ace/config-macosx-snowleopard.h"
+#include "ace/config-macosx-lion.h"
 
 #ifdef ACE_HAS_SYSV_IPC
 #undef ACE_HAS_SYSV_IPC
 #endif
 
-#endif ACE_CONFIG_MACOSX_IPHONE_HARDWARE_H
+#endif /* ACE_CONFIG_MACOSX_IPHONE_HARDWARE_H */
 
