@@ -3,7 +3,7 @@
 #define ACE_CONFIG_MACOSX_IPHONE_SIMULATOR_H
 
 #define ACE_HAS_IPHONE
-#include "ace/config-macosx-snowleopard.h"
+#include "ace/config-macosx-lion.h"
 
-#endif ACE_CONFIG_MACOSX_IPHONE_SIMULATOR_H
+#endif /* ACE_CONFIG_MACOSX_IPHONE_SIMULATOR_H */
 
